--- a/npm/tsconfig.json
+++ b/npm/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "jsx": "react",
         "strict": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
@@ -12,6 +13,6 @@
         "noEmit": true,
         "outDir": "/dist"
     },
-    "include": ["src", "tsup.config.ts", "tsconfig.json"],
+    "include": ["src/**/*.tsx", "tsup.config.ts", "tsconfig.json"],
     "exclude": ["node_modules"]
 }
